fix: 이미지 임시저장 모바일 뷰에서는 필수컬럼 5개도 같이 입력받도록 수정 #91